{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 325,
  "lineage": "67e8ec12-e7c1-8266-264e-f82c60987556",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:loadbalancer/app/application-lb-OBLI/ec01095b7d9207c1",
            "arn_suffix": "app/application-lb-OBLI/ec01095b7d9207c1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-OBLI-749685833.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:192572148784:loadbalancer/app/application-lb-OBLI/ec01095b7d9207c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb-OBLI",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f3efc90ef5f2b057"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a36a1f5ee1ba8c95"
              },
              {
                "subnet_id": "subnet-0a3c2450f58bada7d"
              }
            ],
            "subnets": [
              "subnet-0a36a1f5ee1ba8c95",
              "subnet-0a3c2450f58bada7d"
            ],
            "tags": {
              "Name": "application_lb_OBLI"
            },
            "tags_all": {
              "Name": "application_lb_OBLI"
            },
            "vpc_id": "vpc-04201966e1a317c24",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:loadbalancer/app/application-lb-OBLI/ec01095b7d9207c1"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.security_groups.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:listener/app/application-lb-OBLI/ec01095b7d9207c1/ad45ea42403e52db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:targetgroup/application-tg/bf43d2e66fb9a6bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:192572148784:listener/app/application-lb-OBLI/ec01095b7d9207c1/ad45ea42403e52db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:loadbalancer/app/application-lb-OBLI/ec01095b7d9207c1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:listener/app/application-lb-OBLI/ec01095b7d9207c1/ad45ea42403e52db"
          },
          "dependencies": [
            "module.alb.aws_lb.application_lb",
            "module.alb.aws_lb_target_group.application_tg",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.security_groups.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:targetgroup/application-tg/bf43d2e66fb9a6bf",
            "arn_suffix": "targetgroup/application-tg/bf43d2e66fb9a6bf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:192572148784:targetgroup/application-tg/bf43d2e66fb9a6bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:192572148784:loadbalancer/app/application-lb-OBLI/ec01095b7d9207c1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "application-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "application_tg_OBLI"
            },
            "tags_all": {
              "Name": "application_tg_OBLI"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:192572148784:targetgroup/application-tg/bf43d2e66fb9a6bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09835d8f0cfdddd7a",
            "arn": "arn:aws:ec2:us-east-1:192572148784:elastic-ip/eipalloc-09835d8f0cfdddd7a",
            "association_id": "eipassoc-00c634c08d2dc40c9",
            "domain": "vpc",
            "id": "eipalloc-09835d8f0cfdddd7a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ec90701b2bc37093",
            "private_dns": "ip-10-0-10-126.ec2.internal",
            "private_ip": "10.0.10.126",
            "public_dns": "ec2-34-199-91-129.compute-1.amazonaws.com",
            "public_ip": "34.199.91.129",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat_eip_OBLI"
            },
            "tags_all": {
              "Name": "nat_eip_OBLI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:internet-gateway/igw-0e875f13d4df38b65",
            "id": "igw-0e875f13d4df38b65",
            "owner_id": "192572148784",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-gw"
            },
            "tags_all": {
              "Name": "terraform-gw"
            },
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09835d8f0cfdddd7a",
            "association_id": "eipassoc-00c634c08d2dc40c9",
            "connectivity_type": "public",
            "id": "nat-0fb0b56ee966af7b6",
            "network_interface_id": "eni-0ec90701b2bc37093",
            "private_ip": "10.0.10.126",
            "public_ip": "34.199.91.129",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3c2450f58bada7d",
            "tags": {
              "Name": "nat_gateway_OBLI"
            },
            "tags_all": {
              "Name": "nat_gateway_OBLI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:route-table/rtb-07419d182b15f747b",
            "id": "rtb-07419d182b15f747b",
            "owner_id": "192572148784",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb0b56ee966af7b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_OBLI"
            },
            "tags_all": {
              "Name": "private_route_table_OBLI"
            },
            "timeouts": null,
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "rtb-07419d182b15f747b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:route-table/rtb-015665d072c68d03b",
            "id": "rtb-015665d072c68d03b",
            "owner_id": "192572148784",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e875f13d4df38b65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "rtb-015665d072c68d03b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058348dcbb8563169",
            "region": "us-east-1",
            "route_table_id": "rtb-07419d182b15f747b",
            "subnet_id": "subnet-0d0d5b01163af1d4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.route_table_priv",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ba886832d5681c4",
            "region": "us-east-1",
            "route_table_id": "rtb-07419d182b15f747b",
            "subnet_id": "subnet-066ff3f546d9b6d17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.route_table_priv",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb8e15d77f3c4ea",
            "region": "us-east-1",
            "route_table_id": "rtb-015665d072c68d03b",
            "subnet_id": "subnet-0a3c2450f58bada7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.route_table_pub",
            "module.networking.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42daecd43a4d107",
            "region": "us-east-1",
            "route_table_id": "rtb-015665d072c68d03b",
            "subnet_id": "subnet-0a36a1f5ee1ba8c95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.route_table_pub",
            "module.networking.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:subnet/subnet-0d0d5b01163af1d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d5b01163af1d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192572148784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform_private_subnet_1_OBLI"
            },
            "tags_all": {
              "Name": "terraform_private_subnet_1_OBLI"
            },
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "subnet-0d0d5b01163af1d4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:subnet/subnet-066ff3f546d9b6d17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066ff3f546d9b6d17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192572148784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform_private_subnet_2_OBLI"
            },
            "tags_all": {
              "Name": "terraform_private_subnet_2_OBLI"
            },
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "subnet-066ff3f546d9b6d17",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:subnet/subnet-0a3c2450f58bada7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3c2450f58bada7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192572148784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "subnet-0a3c2450f58bada7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:subnet/subnet-0a36a1f5ee1ba8c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36a1f5ee1ba8c95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192572148784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "subnet-0a36a1f5ee1ba8c95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:security-group/sg-0d5d5d06e10d208ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5d5d06e10d208ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3efc90ef5f2b057"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg_OBLI",
            "name_prefix": "",
            "owner_id": "192572148784",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_sg_OBLI"
            },
            "tags_all": {
              "Name": "app_sg_OBLI"
            },
            "timeouts": null,
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "sg-0d5d5d06e10d208ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_base_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:security-group/sg-07c12c7fc9cb7a22c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c12c7fc9cb7a22c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5d5d06e10d208ba"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "data_base_sg_OBLI",
            "name_prefix": "",
            "owner_id": "192572148784",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data_base_sg"
            },
            "tags_all": {
              "Name": "data_base_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "sg-07c12c7fc9cb7a22c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.application_sg",
            "module.security_groups.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:security-group/sg-0f3efc90ef5f2b057",
            "description": "Security Group para el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3efc90ef5f2b057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_sg_OBLI",
            "name_prefix": "",
            "owner_id": "192572148784",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load_balancer_sg_OBLI"
            },
            "tags_all": {
              "Name": "load_balancer_sg_OBLI"
            },
            "timeouts": null,
            "vpc_id": "vpc-04201966e1a317c24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "sg-0f3efc90ef5f2b057",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192572148784:vpc/vpc-04201966e1a317c24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00eda49aa2d489f89",
            "default_route_table_id": "rtb-0e4886911cfeecf1c",
            "default_security_group_id": "sg-0350e75d1cf0f72cb",
            "dhcp_options_id": "dopt-01789d0e697c133f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04201966e1a317c24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4886911cfeecf1c",
            "owner_id": "192572148784",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_Obligatorio"
            },
            "tags_all": {
              "Name": "vpc_Obligatorio"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192572148784",
            "id": "vpc-04201966e1a317c24",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}